--- a/python/media/css/airi.css
+++ b/python/media/css/airi.css
@@ -1,10 +1,4 @@
-#resizable { 
-  width: 645px; 
-  height: 484px;
-}
-
 #chrome-warning {
-  width: 645px !important;
   margin-bottom: 5px;
 }
 
@@ -63,8 +57,8 @@ iframe {
   width: 120px !important;
   float: left;
   position: absolute;
-  top: 16px;
-  left: 160px;
+  left: 160px !important;
+  top: 0px !important;
 }
 
 .airi_logo h1 {
@@ -314,4 +308,63 @@ ul.NoBulletNoIdent {
 
 .disabled {
   color: lightgray;
+}
+
+.devices_address {
+  float: left;
+  width: 15%;
+  font-size: 1em;
+}
+
+#devices .address
+{
+  float: left;
+  width: 15%;
+  font-size: 1.3em !important; 
+  font-family: monospace;
+}
+
+
+#devices .configure,
+  .devices_configure {
+  float: left;
+  width: 7%;
+}
+
+#devices .name,
+  .devices_name {
+  float: left;
+  width: auto;
+  margin: 0em !important;
+}
+
+#devices .status,
+  .devices_status{
+  float: left;
+  width: 5%
+}
+
+#devices .reconnect,
+  .devices_reconnect {
+  float: left;
+  width: 7%;
+}
+
+#devices .reconnect,
+  .devices_reconnect {
+  width: 6em;
+}
+
+.video {
+    float: left;
+    margin: 10px;
+}
+
+#controls {
+    float: left;
+}
+
+#videoholder {
+  width: 100%;
+  height: 100%;
 }
