--- a/python/media/css/airi.css
+++ b/python/media/css/airi.css
@@ -368,3 +368,11 @@ ul.NoBulletNoIdent {
   width: 100%;
   height: 100%;
 }
+
+.panbutton {
+  float: left;
+}
+
+.panbutton-clear {
+  background-position: 16px; 16px;
+}
