--- a/python/airi/templates/index.html
+++ b/python/airi/templates/index.html
@@ -4,44 +4,31 @@
 {% block header_title %}AIRi{% endblock %}
 
 {% block content %}
-<div data-role="header" data-position="inline">
-  <h1>Registered Cameras</h1>
-</div>
-<div class="ui-body ui-body-c">
-  <div class="ui-grid-a">
-  {% for camera in devices %}
-    <div class="ui-block-a">
-      {% if camera.status %} 
-        {% set theme="b" %}
-      {% else %}
-        {% set theme="c" %} 
-      {% endif %}
-  
-      {{ button("/stream.html?address="+camera.address,
-        camera.address+": "+camera.name,
-        "arrow-r",
-        theme=theme) }}
-    </div>
-    <div class="ui-block-b">
-      {{ button("/setup.html?address="+camera.address, "Configure", "gear", theme="b") }}
-    </div>
-  {% endfor %}
-  </div>
-</div>
-
-</p></p>
-
-<div data-role="header" data-position="inline">
-  <h1>Server Tools</h1>
-</div>
-<div class="ui-body ui-body-e">
-  <div class="ui-grid-a">
-    <div class="ui-block-a">
-      {{ button("/scan.html", "Scan for new devices", "search", theme="e") }}
-    </div>
-    <div class="ui-block-b">
-      {{ button("/server-setup.html", "Server Setup", "gear") }}
-    </div>
-  </div>
-</div>
+{% set cameras = devices|list %}
+<ul data-role="listview" data-dividertheme="d" style="margin-top: 0;" data-split-icon="gear">
+    <li data-role="list-divider">Registered Cameras<span class="ui-li-count">{{ cameras|length}}</span></li>
+    {% for camera in cameras %}
+            <li {% if camera.status %} data-theme="b" {% else %} data-theme="d" {% endif %}>
+            <a href="/stream.html?address={{camera.address}}">
+                <img style="height: 100%;" src="/stream/{{camera.address}}?thumbnail=True"/>
+                <h3>{{ camera.name }}</h3>
+                <p>{{ camera.address }}</p>
+            </a>
+            <a href="/setup.html?address={{camera.address}}">Configure</a>
+        </li>
+    {% endfor %}
+    <li data-role="list-divider">Server Setup</li>
+    <li><a href="/scan.html" data-icon="search">
+        <h3>Scan for new Devices</h3>
+        <p>Allows to register new cameras to the system</p>
+        </a>
+    </li>
+    <li>
+        <a href="/server-setup.html" data-icon="gear">
+            <h3>Server Setup</h3>
+            <p>Here you can configure things like automated PIN codes, etc</p>
+        </a>
+    </li>
+</ul>
 {% endblock %}
+
