--- a/python/airi/templates/server-setup.html
+++ b/python/airi/templates/server-setup.html
@@ -47,7 +47,7 @@
 {% block content %}
 <form method="post" action="/server-setup.html">
 
-<div data-role="collapsible-set">
+<div data-role="collapsible-set"  style="padding: 0px; margin: 5px 12px 0px;">
   <div data-role="collapsible" data-collapsed="false">
     <h3>Pairing configuration</h3>
     <p>
